--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
 
-  <section id="home">
+  <section id="tourist-sites">
     <h2>About Kintampo</h2>
     <div id="p">
       <p>
