--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     </div>
     <div id="home-image">
      <!-- <img src="kintampo.jpg" alt="Kintampo Landscape" id="home-img-1"> -->
+      <div class="tourist-site">
+        <img src="museum.jpg" alt="Kintampo Museum" id="tourist-img-2">
+        <h3 id="tourist-title-2">Kintampo Museum</h3>
+        <p id="tourist-desc-2">Learn about the rich history and culture of the Kintampo people.</p>
+      </div>
+
     </div>
     <div id="p">
       <p id="home-college">The Kintampo College of Health and Well-Being (formerly known as the Kintampo Rural Health Training School) is one of Ghana's premier institutions dedicated to training healthcare professionals. Located in the heart of Kintampo, in the Bono East Region, the college plays a critical role in addressing Ghana's healthcare needs by producing skilled and compassionate health workers.</p>
