--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p id="home-road">Kintampo is well-connected by road, with major highways like the N10 and N11 passing through the town. These roads facilitate the movement of goods and people, linking Kintampo to cities like Kumasi, Tamale, and Accra. However, some rural roads still require upgrades to improve accessibility for surrounding communities.</p>
     </div>
     <div id="home-image">
-     <!-- <img src="kintampo.jpg" alt="Kintampo Landscape" id="home-img-1"> -->
+      <img src="kintampo.jpg" alt="Kintampo Landscape" id="home-img-1"> 
      
 
     </div>
