--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="tourist-sites-container">
 
       <div class="tourist-site">
-        <img src="museum.jpg" alt="Kintampo Museum" id="tourist-img-2">
-        <h3 id="tourist-title-2">Kintampo Museum</h3>
+        <img src="fuller-falls.jpg" alt="Fuller-falls" id="tourist-img-2">
+        <h3 id="tourist-title-2">Kintampo Fuller-falls</h3>
         <p id="tourist-desc-2">Learn about the rich history and culture of the Kintampo people.</p>
       </div>
 
