--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="themer">
   <header>
-    <h1>Welcome to <b style="color:red">C</b><b style="color:blue">Y</b><b style="color:red">K</b><b style="color:aquamarine">Ghana</b> </h1>
+    <h1>Welcome to <b style="color:red">C</b><b style="color:blue">Y</b><b style="color:red">K</b><b style="color:aquamarine"> Ghana</b> </h1>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -46,16 +46,18 @@
   <section id="tourist-sites">
     <h2><center>Tourist Sites</center></h2>
     <div class="tourist-sites-container">
+
+      <div class="tourist-site">
+        <img src="fuller-falls.jpg" alt="Kintampo Fuller-falls" id="tourist-img-2">
+        <h3 id="tourist-title-2">Kintampo Fuller-falls</h3>
+        <p id="tourist-desc-2">Learn about the rich history and culture of the Kintampo people.</p>
+      </div>
       <div class="tourist-site">
         <img src="waterfalls.jpeg" alt="Kintampo Waterfalls" id="tourist-img-1">
         <h3 id="tourist-title-1">Kintampo Waterfalls</h3>
         <p id="tourist-desc-1">A breathtaking natural wonder perfect for hiking and picnics.</p>
       </div>
-      <div class="tourist-site">
-        <img src="museum.jpg" alt="Kintampo Museum" id="tourist-img-2">
-        <h3 id="tourist-title-2">Kintampo Museum</h3>
-        <p id="tourist-desc-2">Learn about the rich history and culture of the Kintampo people.</p>
-      </div>
+      
     </div>
   </section>
 
