--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="themer">
   <header>
-    <h1>Welcome to <b style="color:red">C</b><b style="color:blue">Y</b><b style="color:red">K</b><b style="color:aqua"> Ghana</b> </h1>
+    <h1>Welcome to <b style="color:red">C</b><b style="color:blue">Y</b><b style="color:green">K</b><b style="color:aqua"> Ghana</b> </h1>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
