--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </section>
   
   <section id="tourist-sites">
-    <h2><center>Tourist Sites</center></h2>
+    <h2><center><b>Tourist Sites</b></center></h2>
     <div class="tourist-sites-container">
 
       
@@ -102,7 +102,7 @@
   </section>
 
   <section id="books">
-    <h2><center>Order Books</center></h2>
+    <h2><center><b>Order Books</b></center></h2>
     <form id="book-order-form">
       <label for="name">Name:</label>
       <input type="text" id="name" required>
