--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </section>
 
   <footer>
-    <p>Contact Us: info@kintampotoday.com | Follow us on <a href="#">Facebook</a></p>
+    <p>Contact Us: cyk@gmail.com | Follow us on <a href="#">Facebook</a></p>
     <button id="admin-toggle" onclick="toggleAdminPanel()">Admin Login</button>
     
     <div class="admin-panel" id="admin-panel">
